# cortex

./: .addlicense  .gitignore  .golangci.yml  .goreleaser.yaml  Agent.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  go.mod  tmp.md
.github/workflows/: ci.yml  release.yml
cmd/cortex/: golden_test.go  main.go
docs/inventory/: commands.md  feature-completion-analysis.md  features-overview.md  spec-coverage.md
docs/runner/: PORTABILITY.md
internal/: README.md
internal/builder/: builder_test.go  chunking_test.go  context_writer.go
internal/contextdocs/: generator.go  generator_test.go
internal/docs/: docs_test.go  features_overview.go  implementation_status.go
internal/features/: dashboard.go  (+11 more)
rust/: Cargo.toml
rust/mcp/: Cargo.toml  README.md
rust/mcp/src/: lib.rs  main.rs
rust/mcp/src/config/: mod.rs
rust/mcp/src/io/: fs.rs  memfs.rs  mod.rs
rust/mcp/src/protocol/: types.rs
rust/mcp/src/resolver/: alias_map.rs  git_remote.rs  mod.rs  order.rs  workspace.rs
rust/mcp/src/router/: cache.rs  mod.rs  mounts.rs
rust/mcp/src/skills/: mod.rs
rust/mcp/src/snapshot/: lease.rs  mod.rs  store.rs  tools.rs
rust/mcp/src/util/: mod.rs  paths.rs  stable.rs
rust/mcp/src/workspace/: mod.rs
rust/mcp/tests/: mcp_router_contract_test.rs  mcp_tools_test.rs  no_stdout_pollution.rs  persistence.rs  snapshot_determinism.rs  snapshot_pagination.rs  stale_lease_test.rs  stdio_integrity.rs
spec/: features.yaml  mcp-snapshot-workspace-v1.md  overview.md
test-state/: last-run.json
tests/: package-lock.json  package.json  tsconfig.json
(+243 files in other folders)
