[package]
name = "cortex-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
url = "2.4"
dirs = "5.0"
walkdir = "2.4"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
regex = "1.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
rusqlite = { version = "0.30", features = ["bundled"] }
zstd = "0.13"
tempfile = "3.8"
# Optional async runtime for future rmcp support
tokio = { version = "1.0", features = ["full"], optional = true }
similar = "2.7.0"

[features]
default = ["transport-stdio", "resolver-local", "skills-core"]
transport-stdio = []
resolver-local = []
skills-core = []
deny-exec = []
rmcp = ["tokio"]
